@@ -212,6 +212,8 @@ function isPromise(object) {
  */
 exports.isResolved = isResolved;
 function isResolved(object) {
+    if (object === undefined || object === null)
+        return true;
     return !isPromise(object.valueOf());
 };
 
